1.3.9
Added: A minimum difficulty config, defaults to 0.
Fixed: Negative values not working with difficulty per block config (#75)

1.3.8
Fixed: Difficulty not increasing when sleeping using Morpheus (#60)
Fixed: Blight equipment receiving an unlimited number of enchantments (#70)

1.3.7
Added: Debug mode will now log all spawns.
Fixed (maybe): Some entities (notably Lycanites) not receiving extra health/damage (#64)
Fixed: New difficulty changer items appearing in all creative tabs (#67)

1.3.6
Added: Items that change difficulty (Cursed Heart and Enchanted Heart). They still need some polishing, but are functional. No recipes are included, you will need to make your own. (#57)
Added: Scoreboard criteria for difficulty (scalinghealth:difficulty) (#62)
Changed: Slimes (including magma cubes and probably most modded slimes) now drop far fewer hearts.
Fixed: Entity lists not matching mod entities (#61)

1.3.5
Added: Difficulty per blight kill config (how did I miss that?)
Added: Difficulty per peaceful kill config
Added: Config to set difficulty changes by mob (difficulty/Difficulty Per Kill By Mob) (#57)
Added: Config to set difficulty multipliers in certain dimensions (difficulty/Difficulty Dimension Multiplier) (#57)
Fixed (probably): Entity blacklist causing crashes in some cases (#58)

1.3.4
Fixed: The heart crystal shards -> heart container recipe not working in Forge 2552+ (#55)

1.3.3
Added: Config to add additional XP to all mobs. Default gives an extra 1% per difficulty. Only works on mobs spawned since this update. (#51)
Added: Config to tweak potions applied to non-blights. You can add/remove effects and specify the minimum difficulty requirement and potion level. This is under the new mob/potion category. If changed in-game, you must restart Minecraft. (#52)
Added: Config to add difficulty to players when sleeping through the night (#53)

1.3.2
Added: Config to replace heart container drops with heart crystal shards.