@@ -1,4 +1,5 @@
 1.3.9
+Added: A config to exempt specific players from gaining difficulty. Add the name of each player (not case sensitive) who does not want to have the difficulty system to the list. Exempt players are still part of difficulty calculations, but they count as having zero difficulty. (#71)
 Added: A minimum difficulty config, defaults to 0.
 Fixed: Negative values not working with difficulty per block config (#75)
 
